syntax = "proto3";

package calculator;
option go_package="calcpb";

message SumRequest {
    int64 num_1 = 1;
    int64 num_2 = 2;
}

message SumResponse {
    int64 result = 1;
}

message PrimeNumberDecompositionRequest {
    int32 num = 1;
}

message PrimeNumberDecompositionResponse {
    int32 result = 1;
}

service CalculatorService{
    rpc Sum(SumRequest) returns (SumResponse) {};
    rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse){};
}